Readme and notes updated for 52-mockito